--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,4 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 #        cache: 'npm'
+    - run: cd ./frontend
     - run: yarn install
+    - run: yarn test
