--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,4 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 #        cache: 'npm'
-    - run: cd ./frontend && yarn install && yarn test
+    - run: |
+        cd ./frontend
+        yarn install
+        yarn test
